--- a/index.html
+++ b/index.html
@@ -542,7 +542,21 @@ Akhil K
 		var et_animation_data = [{"class":"et_pb_image_0","style":"slideLeft","repeat":"once","duration":"500ms","delay":"0ms","intensity":"10%","starting_opacity":"0%","speed_curve":"ease-in-out"}];
 	</script>
 	<script type="text/javascript" src="js/photon-photon.min.js" id="jetpack-photon-js"></script>
-
+<script type="text/javascript" id="divi-custom-script-js-extra">
+/* <![CDATA[ */
+var et_shortcodes_strings = {"previous":"Previous","next":"Next"};
+var et_pb_custom = {"images_uri":"http:\/\/shannonwilkinson.com\/wp-content\/themes\/Divi\/images","builder_images_uri":"http:\/\/shannonwilkinson.com\/wp-content\/themes\/Divi\/includes\/builder\/images","et_frontend_nonce":"69c0a2ab30","subscription_failed":"Please, check the fields below to make sure you entered the correct information.","et_ab_log_nonce":"bcd5f1ebb5","fill_message":"Please, fill in the following fields:","contact_error_message":"Please, fix the following errors:","invalid":"Invalid email","captcha":"Captcha","prev":"Prev","previous":"Previous","next":"Next","wrong_captcha":"You entered the wrong number in captcha.","is_builder_plugin_used":"","ignore_waypoints":"no","is_divi_theme_used":"1","widget_search_selector":".widget_search","is_ab_testing_active":"","page_id":"42","unique_test_id":"","ab_bounce_rate":"5","is_cache_plugin_active":"no","is_shortcode_tracking":""};
+var et_pb_box_shadow_elements = [];
+/* ]]> */
+</script>
+<script type="text/javascript" src="js/js-custom.min.js" id="divi-custom-script-js"></script>
+<script type="text/javascript" src="js/js-scripts.js" id="custom-article-cards-js"></script>
+<script type="text/javascript" src="js/js-idle-timer.min.js" id="et_monarch-idle-js"></script>
+<script type="text/javascript" id="et_monarch-custom-js-js-extra">
+/* <![CDATA[ */
+var monarchSettings = {"pageurl":"http:\/\/shannonwilkinson.com\/","stats_nonce":"fcb322c38f","share_counts":"8050bf4742","follow_counts":"f3f0848556","total_counts":"3dbd81618e","media_single":"c8328c419a","media_total":"e4bb18ebbd","generate_all_window_nonce":"4e9243a3fb","no_img_message":"No images available for sharing on this page"};
+/* ]]> */
+</script>
 <script type="text/javascript" src="js/js-custom.js" id="et_monarch-custom-js-js"></script>
 <script type="text/javascript" src="js/js-common.js" id="et-core-common-js"></script>
 <script type="text/javascript" id="mediaelement-core-js-before">
