--- a/index.html
+++ b/index.html
@@ -519,19 +519,9 @@ Akhil K
 	</div> <!-- #page-container -->
 
 	<!-- Drip Code -->
-<script type="text/javascript">
-  var _dcq = _dcq || [];
-  var _dcs = _dcs || {}; 
-  _dcs.account = '7689048';
-  
-  (function() {
-    var dc = document.createElement('script');
-    dc.type = 'text/javascript'; dc.async = true; 
-    dc.src = '//tag.getdrip.com/7689048.js';
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(dc, s);
-  })();
-</script><div class="et_social_pin_images_outer">
+
+
+<div class="et_social_pin_images_outer">
 					<div class="et_social_pinterest_window">
 						<div class="et_social_modal_header"><h3>Pin It on Pinterest</h3><span class="et_social_close"></span></div>
 						<div class="et_social_pin_images" data-permalink="http://panktikillawala.com/" data-title="Home" data-post_id="42"></div>
