--- a/about.html
+++ b/about.html
@@ -384,7 +384,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 					</p>
 				</div>
 			</div> <!-- .et_pb_text --><div class="et_pb_button_module_wrapper et_pb_module et_pb_button_alignment_center">
-				<a  style="   color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="#">BOOK A CALL</a>
+				<a  style="   color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="book-a-call.html">BOOK A CALL</a>
 			</div>
 			</div> <!-- .et_pb_column -->
 				
