--- a/book-a-call.html
+++ b/book-a-call.html
@@ -280,7 +280,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 	<div class="et_pb_text_inner">
 		<a href="#" class="fa fa-instagram"></a>
 		<a href="https://uk.linkedin.com/in/pankti-killawala-fia-abbba333" class="fa fa-linkedin"></a>
-		<p>Pankti Killawala Coaching	</p>
+		<p>Pankti Killawala Coaching ©2023	</p>
 	</div>
 </div> 			</div>	<!-- .container -->
 				</div>
