--- a/mindset.html
+++ b/mindset.html
@@ -305,7 +305,7 @@ The good news is that mindsets can be changed, and you are never too old to make
 <div class="et_pb_text_inner">
 <a href="#" class="fa fa-instagram"></a>
 <a href="https://uk.linkedin.com/in/pankti-killawala-fia-abbba333" class="fa fa-linkedin"></a>
-<p>Pankti Killawala Coaching	</p>
+<p>Pankti Killawala Coaching ©2023	</p>
 </div>
 </div> 			</div>	<!-- .container -->
 		</div>
