--- a/blog.html
+++ b/blog.html
@@ -113,7 +113,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 							<div class="logo_container">
 					<span class="logo_helper"></span>
 					<a href="index.html">
-						<img src="images/uploads-PanktiKillawala-Logo.png" width="100vh" height="100vh" alt="Pankti Killawala" id="logo" data-height-percentage="100">
+						<img src="images/uploads-PanktiKillawala-Logo.png"  alt="Pankti Killawala" id="logo" data-height-percentage="100">
 					</a>
 				</div>
 				<div id="et-top-navigation" data-height="75" data-fixed-height="75">
