--- a/blog.html
+++ b/blog.html
@@ -113,7 +113,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 							<div class="logo_container">
 					<span class="logo_helper"></span>
 					<a href="index.html">
-						<img src="images/uploads-PanktiKillawala-Logo.png"  alt="Pankti Killawala" id="logo" data-height-percentage="100">
+						<img src="images/Website Logo.png"  alt="Pankti Killawala" id="logo" data-height-percentage="100">
 					</a>
 				</div>
 				<div id="et-top-navigation" data-height="75" data-fixed-height="75">
@@ -251,7 +251,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				</div>
 			</div> <!-- .et_pb_text -->
 			<div class="et_pb_button_module_wrapper et_pb_module et_pb_button_alignment_center">
-				<a class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="book-a-call.html">BOOK A CALL</a>
+				<a style="color: black !important;"class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="book-a-call.html">BOOK A CALL</a>
 			</div>
 			</div> <!-- .et_pb_column -->
 				
@@ -283,7 +283,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 	
 	
 <div class="et_pb_text_inner">
-<a href="#" class="fa fa-instagram" style="color:black"></a>
+<a href="https://instagram.com/panktikillawala_coaching" class="fa fa-instagram" style="color:black"></a>
 <a href="https://uk.linkedin.com/in/pankti-killawala-fia-abbba333" style="color:black"class="fa fa-linkedin"></a>
 <p style="color:black">Pankti Killawala Coaching ©2023	</p>
 </div>
