--- a/index.html
+++ b/index.html
@@ -113,10 +113,11 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 							<div class="logo_container">
 					<span class="logo_helper"></span>
 					<a href="index.html">
-						<img src="images/Website Logo.png"  alt="Pankti Killawala" id="logo" data-height-percentage="100">
+						<img src="images/Website Logo.png"  alt="Pankti Killawala" id="logo" data-height-percentage="100" 
+						 />
 					</a>
 				</div>
-				<div id="et-top-navigation" data-height="75" data-fixed-height="75">
+				<div id="et-top-navigation" data-height="75" data-fixed-height="75" style="margin-left: 144px !important">
 					<nav id="top-menu-nav">
 						<ul id="top-menu" class="nav">
 <li id="menu-item-24766" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-24750 current_page_item menu-item-24766"><a href="about.html" style="color: black !important ;" aria-current="page">ABOUT</a></li>
@@ -490,9 +491,11 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 						
 							<div class="card-body">
 								<h5 class="title" id="name">Katie E</h5>
-								<h6 class="subtitle" id="job">UI/UX Designer</h6>
 								<div class="text-review">
 									<p class="text" id="review">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique et nemo, dolor quae hic voluptatum officiis nam architecto corrupti earum accusamus rerum iure sint! Iure cupiditate eius quas laboriosam magnam.</p>
+								</div>
+								<div style="padding-top: 10px;">						
+											<h6 class="subtitle" id="job">UI/UX Designer</h6>
 								</div>
 								<div class="btn-group">
 									<button class="btn btn-left">
