--- a/about.html
+++ b/about.html
@@ -116,8 +116,8 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 						<img src="images/Website Logo.png"  alt="Pankti Killawala" id="logo" data-height-percentage="100">
 					</a>
 				</div>
-				<div id="et-top-navigation" data-height="75" data-fixed-height="75">
-											<nav id="top-menu-nav">
+				<div id="et-top-navigation" data-height="75" data-fixed-height="75" style="margin-left: 144px !important">
+					<nav id="top-menu-nav">
 						<ul id="top-menu" class="nav">
 <li id="menu-item-24766" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-24750 current_page_item menu-item-24766"><a href="about.html" style="color: black !important ;" aria-current="page">ABOUT</a></li>
 <li id="menu-item-24811" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811"><a href="speaking.html" style="color: black !important;">SERVICES</a></li>
@@ -134,7 +134,8 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 					<span class="select_page">Select Page</span>
 					<span class="mobile_menu_bar mobile_menu_bar_toggle"></span>
 				</div>
-			</div>				</div> <!-- #et-top-navigation -->
+			</div>			
+			</div> <!-- #et-top-navigation -->
 			</div> <!-- .container -->
 			<div class="et_search_outer">
 				<div class="container et_search_form_container">
