--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 							<div class="logo_container">
 					<span class="logo_helper"></span>
 					<a href="index.html">
-						<img src="images/Website Logo.png"  alt="Pankti Killawala" id="logo" data-height-percentage="100" 
+						<img src="images/Website Logo.png"  alt="Pankti Killawala" id="logo"   data-height-percentage="100" 
 						 />
 					</a>
 				</div>
-				<div id="et-top-navigation" data-height="75" data-fixed-height="75" style="margin-left: 144px !important">
+				<div id="et-top-navigation" data-height="75" data-fixed-height="75" style="margin-left: 164px !important ; margin-bottom:40px">
 					<nav id="top-menu-nav">
 						<ul id="top-menu" class="nav">
 <li id="menu-item-24766" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-24750 current_page_item menu-item-24766"><a href="about.html" style="color: black !important ;" aria-current="page">ABOUT</a></li>
@@ -486,7 +486,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				</div>
 
 				<main>
-					<div class="container">
+					<div class="container-reviews">
 						<div class="card">
 						
 							<div class="card-body">
