--- a/about.html
+++ b/about.html
@@ -178,7 +178,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				
 				
 				<div class="et_pb_text_inner" style=" color: black; font-family:'Bradley Hand', cursive; ">
-					<p >Over the years I have seen a lot of unfulfilled potential within people around me. One of the main reasons for this has been their mindset. 
+					<p > <div style="font-size: larger !important;">Over the years I have seen a lot of unfulfilled potential within people around me. One of the main reasons for this has been their mindset.</div> 
 						<br/>
 						<br/>
 						I realised that by cultivating a growth mindset, I could live a more fulfilling life and could guide others towards it as well.
@@ -308,7 +308,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 		
 		
 		<div class="et_pb_text_inner" style=" color: black;font-family:'Bradley Hand', cursive; ">
-			<p>Over the years I have seen a lot of unfulfilled potential within people around me. One of the main reasons for this has been mindset. Upon learning about the different mindsets, I realised how the fixed and growth mindset had impacted me in different phases of my life and how contrary to popular belief, I did not fall into the camp of the fixed or growth mindset but moved through either camp based on my environment and expectation of me at different points in my life. 
+			<p><div style="font-size: larger !important;">Over the years I have seen a lot of unfulfilled potential within people around me. One of the main reasons for this has been mindset. Upon learning about the different mindsets, I realised how the fixed and growth mindset had impacted me in different phases of my life and how contrary to popular belief, I did not fall into the camp of the fixed or growth mindset but moved through either camp based on my environment and expectation of me at different points in my life. </div>
 
 </p><p>
 	I realised that by cultivating a growth mindset, I could live a more fulfilling life and could guide others to do it as well. </p>	</div> <!-- .et_pb_text -->
