--- a/speaking.html
+++ b/speaking.html
@@ -300,7 +300,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 		<div class="et_pb_column et_pb_column_1_2  et_pb_column_2 et_pb_css_mix_blend_mode_passthrough et-last-child ">
 			
 			
-			<div class="et_pb_text et_pb_module et_pb_bg_layout_dark et_pb_text_align_left  et_pb_text_1">
+			<div class="et_pb_text et_pb_module et_pb_bg_layout_dark et_pb_text_align_left ">
 			
 			
 				<div class="et_pb_text_inner" style="color: #e6c8ea; font-family: Verdana, Geneva, sans-serif; font-size: 32px;font-weight: bolder;">
