--- a/speaking.html
+++ b/speaking.html
@@ -627,7 +627,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 	
 	</div> <!-- .et_pb_text -->
 
-	<div  ><img src="images/Website_Photo_11.png" width="500"  alt="" data-recalc-dims="1"></div>
+	<div  ><img src="images/P6.JPG" width="500"  alt="" data-recalc-dims="1"></div>
 	<br/>
 	
 	</div> <!-- .et_pb_column -->
