--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 			<div class="et_pb_text et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_text_7">
 				
 				<div class="et_pb_button_module_wrapper et_pb_module et_pb_button_alignment_center">
-					<a style="color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="about.html">More about me </a>&nbsp; &nbsp;	<a style="color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="speaking.html">DISCOVER COACHING</a>
+					<a style="color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="about.html">More about me </a>&nbsp; &nbsp; <span style="padding:10px"></span>	<a style="color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="speaking.html">DISCOVER COACHING</a>
 				</div>
 				
 			</div> <!-- .et_pb_text -->
