--- a/speaking.html
+++ b/speaking.html
@@ -540,7 +540,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 		</div>
 		<div class="et_pb_button_module_wrapper et_pb_module et_pb_button_alignment_center">
 			<a style="color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="individuals.html">FOR INDIVIDUALS</a>
-		<span style="padding: 20px;"></span>
+		<span style="padding: 20px !important;"></span>
 			<a style="color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="corporates.html">FOR CORPORATES/ORGANISATIONS</a>
 		</div>
 		<div class="et_pb_section et_pb_section_5 et_pb_with_background et_section_regular">
