--- a/about.html
+++ b/about.html
@@ -120,8 +120,13 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 					<nav id="top-menu-nav">
 						<ul id="top-menu" class="nav">
 <li id="menu-item-24766" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-24750 current_page_item menu-item-24766"><a href="about.html" style="color: black !important ;" aria-current="page">ABOUT</a></li>
-<li id="menu-item-24811" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811"><a href="speaking.html" style="color: black !important;">PARTNER WITH ME</a></li>
-<li id="menu-item-24768" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24768"><a href="blog.html" style="color: black !important;">BLOG</a></li>
+<li id="menu-item-24811" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811"><a href="speaking.html" style="color: black !important;">PARTNER WITH ME</a>
+	<ul id="top-menu" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811">
+		<br/>
+	<li id="menu-item-24811" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811"><a href="corporates.html" style="color: black !important;">CORPORATES</a></li>
+	<li id="menu-item-24811" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811"><a href="individuals.html" style="color: black !important;"> INDIVIDUALS</a></li>
+	</ul>
+</li><li id="menu-item-24768" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24768"><a href="blog.html" style="color: black !important;">BLOG</a></li>
 <li id="menu-item-25987" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-25987"><a href="book-a-call.html" style="color: black !important ;border-color: black;	">BOOK A CALL</a></li>
 </ul>						
 </nav>
@@ -257,7 +262,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 							<p>While on maternity with both my kids, I started reading about child development and neuroscience.
 
 			
-				I had time to think about what I wanted to do with my life. As an Actuary, I enjoyed building teams and mentoring colleagues. I was also a go to person for anyone who needed career advice (be it friends, family or colleagues and even my husband!). It was a eureka moment when I decided to combine my passion for mentoring and coaching and pursue a diploma in Coaching, Neuroscience and Positive Psychology. This so far has been the best decision for me. I am currently half-way through my training to be a PCC level accredited coach with the International Coaching Federation (ICF). 
+				I had time to think about what I wanted to do with my life. As an Actuary, I enjoyed building teams and mentoring colleagues. I was also a go to person for anyone who needed career advice (be it friends, family or colleagues and even my husband!). It was a eureka moment when I decided to combine my passion for mentoring and coaching and pursue a diploma in Coaching, Neuroscience and Positive Psychology. This so far has been the best decision for me. I am an ACC level accredited coach with the International Coaching Federation (ICF). 
 			</p>
 			</div> <!-- .et_pb_text -->
 			</div>
