--- a/speaking.html
+++ b/speaking.html
@@ -120,8 +120,13 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 					<nav id="top-menu-nav">
 						<ul id="top-menu" class="nav">
 <li id="menu-item-24766" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-24750 current_page_item menu-item-24766"><a href="about.html" style="color: black !important ;" aria-current="page">ABOUT</a></li>
-<li id="menu-item-24811" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811"><a href="speaking.html" style="color: black !important;">PARTNER WITH ME</a></li>
-<li id="menu-item-24768" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24768"><a href="blog.html" style="color: black !important;">BLOG</a></li>
+<li id="menu-item-24811" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811"><a href="speaking.html" style="color: black !important;">PARTNER WITH ME</a>
+	<ul id="top-menu" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811">
+		<br/>
+	<li id="menu-item-24811" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811"><a href="corporates.html" style="color: black !important;">CORPORATES</a></li>
+	<li id="menu-item-24811" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811"><a href="individuals.html" style="color: black !important;"> INDIVIDUALS</a></li>
+	</ul>
+</li><li id="menu-item-24768" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24768"><a href="blog.html" style="color: black !important;">BLOG</a></li>
 <li id="menu-item-25987" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-25987"><a href="book-a-call.html" style="color: black !important ;">BOOK A CALL</a></li>
 </ul>						
 </nav>
@@ -539,9 +544,9 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 		</div> <!-- .et_pb_text -->
 		</div>
 		<div class="et_pb_button_module_wrapper et_pb_module et_pb_button_alignment_center">
-			<a style="color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="individuals.html">FOR INDIVIDUALS</a>
+			<a style="color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="individuals.html">DEVELOP MYSELF</a>
 		<span style="padding: 20px !important;"></span>
-			<a style="color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="corporates.html">FOR CORPORATES/ORGANISATIONS</a>
+			<a style="color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="corporates.html">DEVELOP MY MANAGER OR TEAM</a>
 		</div>
 		<div class="et_pb_section et_pb_section_5 et_pb_with_background et_section_regular">
 				
