--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 						<ul id="top-menu" class="nav">
 <li id="menu-item-24766" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-24750 current_page_item menu-item-24766"><a href="about.html" style="color: black !important ;" aria-current="page">ABOUT</a></li>
 <li id="menu-item-24811" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811"><a href="speaking.html" style="color: black !important;">PARTNER WITH ME</a>
-	<ul id="top-menu" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811">
+	<ul  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811">
 		<br/>
 	<li id="menu-item-24811" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811"><a href="corporates.html" style="color: black !important;">CORPORATES</a></li>
 	<li id="menu-item-24811" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811"><a href="individuals.html" style="color: black !important;"> INDIVIDUALS</a></li>
