--- a/individuals.html
+++ b/individuals.html
@@ -577,6 +577,14 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
                                 <div id="testim-content" class="cont">
                                     
                                     <div class="active">
+                                        <h2><b>Lorraine Crighton-Smith</b></h2>
+                                        <h2>Coach and Marketing Mentor</h2>
+                                        <p>
+                                            Pankti’s professionalism stands out in a sea of unregulated coaches in the UK. Her calming presence and powerful questions have helped me reach goals I’ve procrastinated on for months. Her non-judgemental approach creates a safe space to discuss business plans or more sensitive issues, and she has an impressive toolkit, including strengths and personality tests that give you such self-awareness you can begin to thrive in your environment and become the leader you long to be. I highly recommend working with Pankti as your coach.
+                                        </p>                    
+                                    </div>
+
+                                    <div>
                                         <h2><b>Franki Hale</b></h2>
                                         <h2>Managing Director/Founder Sonder Associates</h2>
                                         <p>Pankti has helped me gain clarity and understanding on my next steps whenever I felt stuck. Through powerful questions she challenged my thinking which helped me set my goals and take action both in my professional and personal life. She creates a calm and comfortable environment making it easy to talk to her.</p>                    
