--- a/corporates.html
+++ b/corporates.html
@@ -562,10 +562,10 @@ DISC profiling creates a framework that will enable you to understand how indivi
                     
                                     
                                     <ul id="testim-dots" class="dots">
-                                        <li class="dot active"></li><!--
-                                        --><li class="dot"></li><!--
-                                        --><li class="dot"></li><!--
-                                        -->
+                                        <li class="dot active"></li>
+											<li class="dot"></li>
+											<li class="dot"></li>
+											<li class="dot"></li>
                                     </ul>
                                     <div id="testim-content" class="cont">
                                         <div class="active">
