--- a/index.html
+++ b/index.html
@@ -587,10 +587,10 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 									<div class="wrap">
 						
 										<ul id="testim-dots" class="dots">
-											<li class="dot active"></li><!--
-											--><li class="dot"></li><!--
-											--><li class="dot"></li><!--
-											-->
+											<li class="dot active"></li>
+											<li class="dot"></li>
+											<li class="dot"></li>
+											<li class="dot"></li>
 										</ul>
 										<div id="testim-content" class="cont">
 											<div class="active">
