--- a/speaking.html
+++ b/speaking.html
@@ -175,7 +175,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				
 				
 					<div class="et_pb_text_inner" style="color: #e6c8ea;font-family: Verdana, Geneva, sans-serif; font-size: 32px;font-weight: bold; ">
-						Leadership & Performance Coaching
+						Coaching & Mentoring
 					</div>
 	
 				</div> <!-- .et_pb_text -->
