--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 			</div>
 			<div id="wrapper">
 				<p class="f1" style=" font-size:75px;padding-top:30px;font-family: 'Chalisa Oktavia', cursive; ">Pankti Parikh Killawala</p>
-				<p class='s2'>Coach for high achievers & perfectionist.</p>
+				<p class='s2' style=" font-size: 34px;">Coach for high achievers & perfectionists.</p>
 				&nbsp;
 			  </div>
 		</header> <!-- #main-header -->
