--- a/about.html
+++ b/about.html
@@ -395,7 +395,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				</div>
 			</div> <!-- .et_pb_text -->
 			<div class="et_pb_button_module_wrapper et_pb_module et_pb_button_alignment_center">
-				<a style="color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="book-a-call.html">BOOK A CALL</a>
+				<a style="color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="https://tidycal.com/panktikillawala/discovery-call">BOOK A CALL</a>
 			</div>
 			</div> <!-- .et_pb_column -->
 				
