--- a/blog.html
+++ b/blog.html
@@ -127,7 +127,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 	<li id="menu-item-24811" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811"><a href="individuals.html" style="color: black !important;"> INDIVIDUALS</a></li>
 	</ul>
 </li><li id="menu-item-24768" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24768"><a href="blog.html" style="color: black !important;">BLOG</a></li>
-<li id="menu-item-25987" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-25987"><a href="https://tidycal.com/panktikillawala/discovery-call" style="color: black !important ;">BOOK A CALL</a></li>
+<li id="menu-item-25987" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-25987"><a href="https://tidycal.com/panktikillawala/clarity-call" style="color: black !important ;">BOOK A CALL</a></li>
 </ul>						
 </nav>
 					
@@ -256,7 +256,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 				</div>
 			</div> <!-- .et_pb_text -->
 			<div class="et_pb_button_module_wrapper et_pb_module et_pb_button_alignment_center">
-				<a style="color: black !important;"class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="book-a-call.html">BOOK A CALL</a>
+				<a style="color: black !important;"class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="https://tidycal.com/panktikillawala/clarity-call">BOOK A CALL</a>
 			</div>
 			</div> <!-- .et_pb_column -->
 				
