--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 
 				</div> <!-- .et_pb_text -->
 				<div class="et_pb_button_module_wrapper et_pb_module et_pb_button_alignment_center">
-					<a style="color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="book-a-call.html"> LET'S CHAT</a>
+					<a style="color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="https://tidycal.com/panktikillawala/clarity-call"> LET'S CHAT</a>
 				</div>
 			</div> <!-- .et_pb_column -->
 			<div class="et_pb_column et_pb_column_1_2  et_pb_column_4 et_pb_css_mix_blend_mode_passthrough">
