--- a/book-a-call.html
+++ b/book-a-call.html
@@ -236,7 +236,12 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 
                       </b>
                    </p>		
-				   <div class="tidycal-embed" data-path="panktikillawala/discovery-call"></div>
+				   <div class="et_pb_button_module_wrapper et_pb_module et_pb_button_alignment_center">
+					<a style="color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="https://tidycal.com/panktikillawala/clarity-call">Individual Coaching - Book a call</a>
+				</div>
+				<div class="et_pb_button_module_wrapper et_pb_module et_pb_button_alignment_center">
+					<a style="color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="https://tidycal.com/panktikillawala/strategycall">Corporate Coaching - Book a call</a>
+				</div>
 
                        </div>
 
