--- a/individuals.html
+++ b/individuals.html
@@ -338,7 +338,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
             <div class="et_pb_text_inner"style=" font-family: Verdana, Geneva, sans-serif; color: black !important;" >Additionally, you will have private email access for any support required between our calls/ sessions
             </div>
             <div class="et_pb_button_module_wrapper et_pb_module et_pb_button_alignment_center">
-                <a style="color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="book-a-call.html">KICKSTART YOUR COACHING JOURNEY FOR £499 ONLY</a>
+                <a style="color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="https://tidycal.com/panktikillawala/clarity-call">KICKSTART YOUR COACHING JOURNEY FOR £499 ONLY</a>
             </div>
             <div class="et_pb_text_inner" style=" font-family: Verdana, Geneva, sans-serif; color: black !important;">        If you decide to upgrade to my Level Up package then the amount paid for the Kickstart will be deducted from the total package!
             </div>
@@ -516,7 +516,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
     <div class="et_pb_text_inner"style=" font-family: Verdana, Geneva, sans-serif; color: black !important;" >Additionally, you will have private email access for any support required between our calls/ sessions
     </div>
     <div class="et_pb_button_module_wrapper et_pb_module et_pb_button_alignment_center">
-        <a style="color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="book-a-call.html">KICKSTART YOUR COACHING JOURNEY FOR £499 ONLY</a>
+        <a style="color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="https://tidycal.com/panktikillawala/clarity-call">KICKSTART YOUR COACHING JOURNEY FOR £499 ONLY</a>
     </div>
     <div class="et_pb_text_inner" style=" font-family: Verdana, Geneva, sans-serif; color: black !important;">        If you decide to upgrade to my Level Up package then the amount paid for the Kickstart will be deducted from the total package!
     </div>
