script tag changes

--- a/about.html
+++ b/about.html
@@ -466,6 +466,14 @@ var et_pb_box_shadow_elements = [];
 		_stq.push([ 'clickTrackerInit', '164830917', '24750' ]);
 	</script>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FNSSG8DRLP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-FNSSG8DRLP');
+</script>
 </body>
 </html>
