--- a/blog.html
+++ b/blog.html
@@ -339,6 +339,15 @@ var _wpmejsSettings = {"pluginPath":"\/wp-includes\/js\/mediaelement\/","classPr
 		_stq.push([ 'view', {v:'ext',blog:'164830917',post:'24722',tz:'-7',srv:'panktikillawala.com',j:'1:12.0'} ]);
 		_stq.push([ 'clickTrackerInit', '164830917', '24722' ]);
 	</script>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FNSSG8DRLP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FNSSG8DRLP');
+</script>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	</body>
