--- a/corporates.html
+++ b/corporates.html
@@ -668,6 +668,15 @@ DISC profiling creates a framework that will enable you to understand how indivi
     
     </script>
     <script src="carasouel.js"></script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FNSSG8DRLP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FNSSG8DRLP');
+</script>
     <script src="https://use.fontawesome.com/1744f3f671.js"></script>
     <script type="text/javascript" src="js/js-custom.js" id="et_monarch-custom-js-js"></script>
     <script type="text/javascript" src="js/js-common.js" id="et-core-common-js"></script>
