--- a/index.html
+++ b/index.html
@@ -719,6 +719,15 @@ var _wpmejsSettings = {"pluginPath":"\/wp-includes\/js\/mediaelement\/","classPr
 </script>
 <script src="cover_banner.js"></script>
 <script src="carasouel.js"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FNSSG8DRLP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FNSSG8DRLP');
+</script>
 <script src="https://use.fontawesome.com/1744f3f671.js"></script>
 <script type="text/javascript" src="js/mediaelement-wp-mediaelement.min.js" id="wp-mediaelement-js"></script>
 <style id="et-builder-module-design-cached-inline-styles">div.et_pb_section_0.et_pb_section{background-color:#ffffff!important}.et_pb_row_0.et_pb_row{padding-top:0px;}.et_pb_text_0 p{line-height:1.2em}.et_pb_text_0{font-size:50px;line-height:1.2em;max-width:550px}.et_pb_text_1 p{line-height:1.8em}.et_pb_text_1{line-height:1.8em}
