--- a/individuals.html
+++ b/individuals.html
@@ -657,6 +657,15 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 						<script type="text/javascript">
 		var et_animation_data = [{"class":"et_pb_image_0","style":"slideLeft","repeat":"once","duration":"1000ms","delay":"0ms","intensity":"50%","starting_opacity":"0%","speed_curve":"ease-in-out"},{"class":"et_pb_image_1","style":"fade","repeat":"once","duration":"500ms","delay":"0ms","intensity":"50%","starting_opacity":"0%","speed_curve":"ease-in-out"}];
 	</script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FNSSG8DRLP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FNSSG8DRLP');
+</script>
 	<script type="text/javascript" src="js/photon-photon.min.js" id="jetpack-photon-js"></script>
 <script type="text/javascript" id="divi-custom-script-js-extra">
 /* <![CDATA[ */
