--- a/mindset1.html
+++ b/mindset1.html
@@ -366,6 +366,15 @@ team and even your children going forwards.
 					<script type="text/javascript">
 		var et_animation_data = [];
 	</script>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FNSSG8DRLP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FNSSG8DRLP');
+</script>
 	<script type="text/javascript" src="js/photon-photon.min.js" id="jetpack-photon-js"></script>
 <script type="text/javascript" id="divi-custom-script-js-extra">
 /* <![CDATA[ */
