--- a/speaking.html
+++ b/speaking.html
@@ -650,6 +650,15 @@ var et_pb_box_shadow_elements = [];
 <script type="text/javascript" src="js/js-idle-timer.min.js" id="et_monarch-idle-js"></script>
 
 </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FNSSG8DRLP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FNSSG8DRLP');
+</script>
 <script type="text/javascript" src="js/js-custom.js" id="et_monarch-custom-js-js"></script>
 <script type="text/javascript" src="js/js-common.js" id="et-core-common-js"></script>
 <style id="et-builder-module-design-cached-inline-styles">body #page-container .et_pb_button_0{color:#ffffff!important;border-width:13px!important;border-color:#e6c8ea ;border-radius:4px;letter-spacing:2px;font-size:15px;font-weight:700!important;background-color:#e6c8ea }body #page-container .et_pb_button_0:hover{background:#e6c8ea !important;border-color:#e6c8ea !important;border-radius:4px;letter-spacing:2px}body #page-container .et_pb_button_0:hover:after{margin-left:.3em;left:auto;margin-left:.3em;opacity:1}body #page-container .et_pb_button_0:after{color:#ffffff;line-height:1.7em;font-size:15px!important;margin-left:-1em;left:auto}
