--- a/speaking.html
+++ b/speaking.html
@@ -340,13 +340,14 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 			<div class="et_pb_column et_pb_column_1_2  et_pb_column_1 et_pb_css_mix_blend_mode_passthrough">
 			
 			
-			<div class="et_pb_module et_pb_image et-waypoint et_animated et_pb_image_0 et_always_center_on_mobile">
+				<div class="et_pb_text et_pb_module et_pb_bg_layout_dark et_pb_text_align_left ">
 			
-				<div class="et_pb_text_inner" style="color: #e6c8ea; font-family: Verdana, Geneva, sans-serif; font-size: 32px;font-weight: bolder;">
-					<p>How will we work together?
-					</p>
-				</div>
-		</div> <!-- .et_pb_text -->
+			
+					<div class="et_pb_text_inner" style="color: #e6c8ea; font-family: Verdana, Geneva, sans-serif; font-size: 32px;font-weight: bolder;">
+						<p>How will we work together:
+						</p>
+					</div>
+			</div>
 		<div class="et_pb_text et_pb_module et_pb_bg_layout_dark et_pb_text_align_center   et_pb_text_7">
 		
 			<div class="et_pb_text_inner"  style="text-align: left; padding-left:20px; color: black; font-family: Verdana, Geneva, sans-serif;">
