--- a/mindset.html
+++ b/mindset.html
@@ -123,11 +123,11 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 <li id="menu-item-24811" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811"><a href="speaking.html" style="color: black !important;">PARTNER WITH ME</a>
 	<ul id="top-menu" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811">
 		<br/>
-	<li id="menu-item-24811" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811"><a href="corporates.html" style="color: black !important;">CORPORATES</a></li>
+	<li id="menu-item-24811" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811"><a href="corporates.html" style="color: black !important;">ORGANISATIONS</a></li>
 	<li id="menu-item-24811" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811"><a href="individuals.html" style="color: black !important;"> INDIVIDUALS</a></li>
 	</ul>
 </li>
-<li id="menu-item-24768" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24768"><a href="blog.html" style="color: black !important;">BLOG</a></li>
+<li id="menu-item-24768" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24768"><a href="blog.html" style="color: black !important;">MEDIA</a></li>
 <li id="menu-item-25987" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-25987"><a href="book-a-call.html" style="color: black !important ;">BOOK A CALL</a></li>
 </ul>						
 </nav>
@@ -273,6 +273,35 @@ var _wpmejsSettings = {"pluginPath":"\/wp-includes\/js\/mediaelement\/","classPr
   gtag('js', new Date());
 
   gtag('config', 'G-FNSSG8DRLP');
+</script>
+<script type="text/javascript">
+	var message="Image Download Disabled!";
+
+	function clickIE4(){
+		if (event.button==2){
+			alert(message);
+			return false;
+		}
+	}
+
+	function clickNS4(e){
+		if (document.layers||document.getElementById&&!document.all){
+			if (e.which==2||e.which==3){
+				alert(message);
+				return false;
+			}
+		}
+	}
+
+	if (document.layers){
+		document.captureEvents(Event.MOUSEDOWN);
+		document.onmousedown=clickNS4;
+	}
+	else if (document.all&&!document.getElementById){
+		document.onmousedown=clickIE4;
+	}
+
+	document.oncontextmenu=new Function("alert(message);return false")
 </script>
 <script type="text/javascript" src="js/mediaelement-wp-mediaelement.min.js" id="wp-mediaelement-js"></script>
 <style id="et-builder-module-design-cached-inline-styles">.et_pb_section_0.et_pb_section{background-color:rgb(237,188,235 )!important}.et_pb_row_0.et_pb_row{padding-top:80px;padding-bottom:80px}.et_pb_text_1 p{line-height:1.2em}.et_pb_text_1{font-size:50px;line-height:1.2em;max-width:800px}.et_pb_section_1{padding-top:41.3594px;padding-right:1px;padding-bottom:41.3594px;padding-left:0px}.et_pb_blog_0 .et_pb_post .entry-title a{color:#e6c8ea !important}.et_pb_blog_0 .et_pb_post .entry-title{font-size:34px!important}.et_pb_blog_0 .et_pb_post,.et_pb_blog_0 .et_pb_post .post-content *{color:#666666!important}.et_pb_blog_0 .et_pb_post .post-content,.et_pb_blog_0.et_pb_bg_layout_light .et_pb_post .post-content p,.et_pb_blog_0.et_pb_bg_layout_dark .et_pb_post .post-content p{font-size:20px}.et_pb_blog_0 .et_pb_post .post-meta,.et_pb_blog_0 .et_pb_post .post-meta a{font-weight:700;font-size:18px;color:#2a4452!important;line-height:2em}.et_pb_blog_0 .more-link{font-size:16px;color:#e6c8ea ;font-weight:bold;font-style:normal;text-transform:uppercase;text-decoration:none;letter-spacing:1px}.et_pb_column_2{background-color:rgba(130,205,184,0.4);padding-top:50px;padding-right:40px;padding-bottom:40px;padding-left:40px}.et_pb_image_0{max-width:320px;margin-top:-20px!important;text-align:center}.et_pb_text_2.et_pb_text{color:#e6c8ea !important}.et_pb_text_2{font-weight:700;max-width:400px}body #page-container .et_pb_button_0{font-size:16px}body #page-container .et_pb_button_0:hover{letter-spacing:1px}body #page-container .et_pb_button_0:after{font-size:25.6px}body.et_button_custom_icon #page-container .et_pb_button_0:after{font-size:16px}.et_pb_section_2.et_pb_section{background-color:#e6c8ea !important}.et_pb_row_2.et_pb_row{padding-top:60px;padding-bottom:60px}.et_pb_row_2{max-width:780px!important}.et_pb_text_3.et_pb_text{color:#ffffff!important}.et_pb_text_3 p{line-height:1.2em}.et_pb_text_3{font-size:46px;line-height:1.2em;font-weight:300}.et_pb_text_4 p{line-height:1.5em}.et_pb_text_4{font-size:24px;line-height:1.5em;margin-top:24px!important;margin-bottom:40px!important;font-weight:300}body #page-container .et_pb_button_1{color:#ffffff!important;border-color:#ffffff;font-size:16px}body #page-container .et_pb_button_1:hover{color:#ffffff!important;border-color:#ffffff!important;letter-spacing:1px}body #page-container .et_pb_button_1:after{font-size:25.6px}body.et_button_custom_icon #page-container .et_pb_button_1:after{font-size:16px}.et_pb_text_2.et_pb_module{margin-left:auto!important;margin-right:auto!important}@media only screen and (max-width:980px){.et_pb_section_0{padding-top:50px;padding-right:0px;padding-bottom:50px;padding-left:0px}.et_pb_section_1{padding-top:50px;padding-right:0px;padding-bottom:50px;padding-left:0px}.et_pb_section_2{padding-top:50px;padding-right:0px;padding-bottom:50px;padding-left:0px}}</style>	<script src="js/e-202318.js" defer></script>
