--- a/index.html
+++ b/index.html
@@ -124,14 +124,8 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 					<nav id="top-menu-nav">
 						<ul id="top-menu" class="nav">
 <li id="menu-item-24766" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-24750 current_page_item menu-item-24766"><a href="about.html" style="color: black !important ;" aria-current="page">ABOUT</a></li>
-<li id="menu-item-24811" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811"><a href="speaking.html" style="color: black !important;">PARTNER WITH ME</a>
-	<ul  class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811">
-		<br/>
-	<li id="menu-item-24811" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811"><a href="corporates.html" style="color: black !important;">ORGANISATIONS</a></li>
-	<li id="menu-item-24811" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811"><a href="individuals.html" style="color: black !important;"> INDIVIDUALS</a></li>
-	</ul>
-</li>
-
+<li id="menu-item-24811" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811"><a href="corporates.html" style="color: black !important;">ORGANISATIONS</a></li>
+<li id="menu-item-24811" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811"><a href="individuals.html" style="color: black !important;"> INDIVIDUALS</a></li>
 <li id="menu-item-24768" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24768"><a href="blog.html" style="color: black !important;">MEDIA</a></li>
 <li id="menu-item-25987" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-25987"><a href="book-a-call.html" style="color: black !important ;">BOOK A CALL</a></li>
 </ul>						
@@ -214,7 +208,7 @@ rapidly evolving business landscape.
 
 							</b>
 							<div class="et_pb_button_module_wrapper et_pb_module et_pb_button_alignment_center">
-								<a style="color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="https://tidycal.com/panktikillawala/clarity-call"> LET'S CHAT</a>
+								<a style="color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="book-a-call.html"> LET'S CHAT</a>
 							</div>
 							</div>
 					</div> 
@@ -272,7 +266,7 @@ rapidly evolving business landscape.
 
 				</b>
 				<div class="et_pb_button_module_wrapper et_pb_module et_pb_button_alignment_center">
-					<a style="color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="https://tidycal.com/panktikillawala/clarity-call"> LET'S CHAT</a>
+					<a style="color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="book-a-call.html"> LET'S CHAT</a>
 				</div>
 			</div> <!-- .et_pb_column -->
 			<div class="et_pb_column et_pb_column_1_2  et_pb_column_4 et_pb_css_mix_blend_mode_passthrough">
@@ -566,7 +560,7 @@ rapidly evolving business landscape.
 				</p>
 				<br/>
 				<div class="et_pb_button_module_wrapper et_pb_module et_pb_button_alignment_center">
-					<a style="color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="https://tidycal.com/panktikillawala/clarity-call">BOOK A CALL</a>
+					<a style="color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="book-a-call.html">BOOK A CALL</a>
 				</div>
 				</div>
 		</div> 
@@ -584,7 +578,7 @@ rapidly evolving business landscape.
 					<div class="et_pb_text_inner ">
 						<b style=" font-family: Verdana, Geneva, sans-serif; color: #e7c9eb">  What my clients say ... </b>
 					</div>
-</div>
+               </div>
 				</div>
 				</div>
 
@@ -664,6 +658,7 @@ rapidly evolving business landscape.
 			
 			
 	<div class="et_pb_text_inner">
+		<div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="d571ac4f-af63-4f1d-9bb7-c1a23c91a0ce" data-share-badge-host="https://www.credly.com"></div>
 		<a href="https://instagram.com/panktikillawala_coaching" class="fa fa-instagram" style="color:black"></a>
 		<a href="https://uk.linkedin.com/in/pankti-killawala-fia-abbba333" style="color:black" class="fa fa-linkedin"></a>
 		<p style="color:black">Pankti Killawala Coaching ©2023	</p>
@@ -754,6 +749,7 @@ var _wpmejsSettings = {"pluginPath":"\/wp-includes\/js\/mediaelement\/","classPr
 
   gtag('config', 'G-FNSSG8DRLP');
 </script>
+<script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
 <script src="https://use.fontawesome.com/1744f3f671.js"></script>
 <script type="text/javascript" src="js/mediaelement-wp-mediaelement.min.js" id="wp-mediaelement-js"></script>
 <style id="et-builder-module-design-cached-inline-styles">div.et_pb_section_0.et_pb_section{background-color:#ffffff!important}.et_pb_row_0.et_pb_row{padding-top:0px;}.et_pb_text_0 p{line-height:1.2em}.et_pb_text_0{font-size:50px;line-height:1.2em;max-width:550px}.et_pb_text_1 p{line-height:1.8em}.et_pb_text_1{line-height:1.8em}
