--- a/book-a-call.html
+++ b/book-a-call.html
@@ -123,7 +123,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 <li id="menu-item-24811" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811"><a href="corporates.html" style="color: black !important;">ORGANISATIONS</a></li>
 <li id="menu-item-24811" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24811"><a href="individuals.html" style="color: black !important;"> INDIVIDUALS</a></li>
 <li id="menu-item-24768" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-24768"><a href="blog.html" style="color: black !important;">MEDIA</a></li>
-<li id="menu-item-25987" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-25987"><a href="book-a-call.html" style="color: black !important ;">BOOK A CALL</a></li>
+<li id="menu-item-25987" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-25987"><a href="book-a-call.html" style="color: black !important ;">CONTACT ME</a></li>
 </ul>						
 </nav>
 			
@@ -187,6 +187,12 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 
   </b>
 </p>		
+<div class="et_pb_button_module_wrapper et_pb_module et_pb_button_alignment_center">
+	<a style="color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="https://tidycal.com/panktikillawala/clarity-call">Individual Coaching - Book a call</a>
+</div>
+<div class="et_pb_button_module_wrapper et_pb_module et_pb_button_alignment_center">
+	<a style="color: black !important;" class="et_pb_button  et_pb_button_0 et_pb_module et_pb_bg_layout_dark" href="https://tidycal.com/panktikillawala/strategycall">Corporate Coaching - Book a call</a>
+</div>
     </div>
 				
 				
